#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-10-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.52 released.

        * Moved IO::Pty requirement to 1.09 for Cygwin

        * Added new argument -p and --plan for new "Plan"
          functionality


2010-10-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.51 released.

        * Fixed more permissions for Custom dir when choosing
          Default permissions

        * Fixed some bugs associated with the --edit feature

        * Fixed multiple addresses when sending email


2010-10-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.50 released.

        * Fixed permissions for Custom dir when choosing
          Default permissions

        * Switched back to IO::CaptureOutput for two functions
          that didn't work right with Capture::Tiny.
          Capture::Tiny remains in the email function however.


2010-10-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.49 released.

        * fa_conf now stores editor setting

        * Makefile.PL modified to assist user in selecting
          editor


2010-09-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.48 released.

        * Replaced IO::CaptureOutput with Capture::Tiny
          (works better).


2010-09-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.47 released.

        * Replaced Mail::Internet and Mail::Sender with
          Email::Sender and MIME::Entity modules. Send_email
          functionality was modified to use these modules
          instead. The reason for the replacement, was