@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c066b9e9f0c94c43646b924aa9821712fe668e4e ChangeLog
+SHA1 b90be35b28b71bfcbd0d539f006053ad09a7b01e ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 17026997fcae1fb137199754ecc8ba9e6276fd19 META.yml
-SHA1 2871c0e33bc6269ac371b2d14fe28073e77928ac Makefile.PL
+SHA1 c851171639b225d16e76766fc516bf40eb296065 META.yml
+SHA1 96bb1b7bbde15b06a0bcae8974aad8dc764c4260 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 417ade8a2f096268522da13c2779e070fe2a30bf lib/Net/FullAuto.pm
+SHA1 158094746f2c4d27a39ec839028dca6f136fc869 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 c312c49b9b45e407e8deb9b4703e5c2aa8e71fc3 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkyruQEACgkQdsVAdUjO9IlWRQCfc6DlwKMKJw7Nlh23aCmcvbSv
-/R4An3LELYfOOskS5VJ11xo7nlv4czTj
-=FBYK
+iEYEARECAAYFAkytv68ACgkQdsVAdUjO9ImgdwCeIRKX3NQiMUiF4x/68jFPT+Ih
+k/oAnR3XsExIrb0N+0CTUt5PUgvo2dXY
+=WhHO
 -----END PGP SIGNATURE-----
