@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.52';
+our $VERSION='0.53';
 
 
 use 5.005;
